--- v0.6.1 [Not released yet] ---

* [FIX] Fixed bug that caused file-based configuration options to be wrongly overriden by defaulted program args.

--- v0.6.0 [2014-09-24] ---

* [NEW] Major updates to the UI design.

* [NEW] Added user proceses filtering to processes page.

* [FIX] Fixed bug where the highlighted text when searching a log could be misplaced.

--- v0.5.0 [2014-09-06] ---

* [NEW] Added HTTPS support.

* [NEW] Added support for multiple hosts.

* [NEW] Changed to using the netifaces lib for reading the host ip-address. (Thanks to Leonardo Santagada)

* [NEW] Made it possible to filter on remote/local address port on the system-wide connections page.

--- v0.4.0 [2014-07-24] ---

* [NEW] Added a environment variables sub-page to the process view.

* [NEW] Updated psutil to 2.1.1

* [NEW] Added a system-wide connections table on the network page.

* [FIX] Removed accidentally committed print statement.

* [NEW] Added more tests and made some refactorings as a consequence.

* [NEW] Added Travis CI setup and test coverage.

* [NEW] Added filters to system-wide connections table

* [NEW] Some rather large refactorings in general due to added tests.

--- v0.3.0 [2014-04-15] ---

* [NEW] Added a PSDASH_URL_PREFIX configuration setting to allow psdash to be served from a sub-url rather than always on root.

* [NEW] Now updating the list of available logs every minute.

* [NEW] The list of logs is now sorted in alphabetical order.

* [FIX] Fixed bug where the view logs page would crash if a previously added log becomes unavailable.

* [FIX] Fix for Python 3 support.

--- v0.2.0 [2014-04-05] ---

* [NEW] It's now possible to pass a pattern (e.g /var/log/**/*.log) when adding log files through the arg option --log.

* [FIX] Fixed issue where file size formatted values would be displayed as zero.

* [FIX] Fixed multiple issues related to non-ascii chars.

* [FIX] Fixed issue where HTML was not escaped in the log contents.

--- v0.1.2 [2014-03-31] ---
