@@ -19,7 +19,7 @@
         </tr>
         <tr>
             <td>User</td>
-            <td>{{ process.user }}</td>
+            <td>{{ process.user or "-"}}</td>
         </tr>
         <tr>
             <td>User ids</td>
